# compliance-checker

./: README.md  dev.py  extract.py  extract_agent.py  extract_debug.py  extract_isi.py  extract_scemantic.py  generate_dummy_pdf.py  main.py  pyproject.toml
compliance_reports/: isi_report_a.html
src/: alignment.py  extraction.py  labeling.py  metrics.py  normalization.py
tests/: test_logic.py
